<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/light_blue"
    >

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        />

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/washingMachineImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/pralka"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/washingMachineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/washingMachine"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/washingNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="number"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/washingNumberHint"
                android:background="@color/sky_blue"
                android:textColor="@color/navy"
                android:textColorHint="@color/navy"
                />

            <Button
                android:id="@+id/washingMachineBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_margin="10dp"
                android:backgroundTint="@color/royal_blue"
                />

            <TextView
                android:id="@+id/washingNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Numer prania: nie podano" />


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/vacuumImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/odkurzacz"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/vacuumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacuum"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/turnOnBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/turnOn"
                android:layout_margin="10dp"
                android:backgroundTint="@color/royal_blue"/>

            <TextView
                android:id="@+id/vacuumPowerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Odkurzacz wyłączony" />

            <TextView
                android:id="@+id/vacuumBatteryStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status: naładowany" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>